<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="button_report">Reports</string>
    <string name="app_name">PT Assistant</string>
    <string name="edit_message">Patient ID</string>
    <string name="action_settings">Settings</string>
    <string name="action_register_patient">Register Patient</string>
    <string name="title_activity_display_message">PT Assistant: Patient Record</string>
    <string name="button_get">Get Patient</string>
    <string name="button_Register">Register Patient</string>
    <string name="button_update">Update Patient</string>
    <string name="action_search">Search</string>
    <string name="button_create_patient">Create Patient</string>
    <string name="patient_name">Name</string>
    <string name="patient_ID">Patient ID</string>
    <string name="injury_id">Injury ID</string>
    <string name="title_record_created_activity">Patient Registration</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="birth_date">DOB(mm/dd/yyyy)</string>
    <string name="pat_age">age</string>
    <string name="injury_code">injury code</string>
    <string name="button_getPatientList"> Patient List</string>
    <string name="pattient_list"> Patients</string>
    <string name="title_activity_trend_report">TrendReportActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_notes">CreateNotes</string>
    <string name="title_activity_subjective_notes">SubjectiveNotes</string>
    <string name="title_activity_objective_notes">ObjectiveNotes</string>
    <string name="title_activity_assessment_notes">AssessmentNotes</string>
    <string name="title_activity_plan_notes">PlanNotes</string>
    <string name="title_activity_treatment_plan">TreatmentPlan</string>
    <string name="injuryName"></string>
    <string name="phaseName"></string>
    <string name="instructIntReps"></string>
    <string name="instructIntMin"></string>
    <string name="instructIntMax"></string>
    <string name="exerciseOne"></string>
    <string name="exerciseTwo"></string>
    <string name="exerciseThree"></string>

    <string-array name="injury_array">
        <item>LUMBAR STRAIN</item>
        <item>ROTATOR CUFF TEAR</item>
        <item>ACL TEAR</item>
    </string-array>

    <string name="title_activity_injury_lookup">InjuryLookup</string>
    <string name="title_activity_create_report">CreateReportActivity</string>
    <string name="title_activity_trend_chart">TrendChartActivity</string>
    <string name="title_activity_trend_chart_gui">TrendChartGUIActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
