<TableLayout 
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="sendMessage"
        	android:text="@string/button_get" />
        
        <EditText
          	android:id="@+id/patient_ID"
          	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
          	android:hint="@string/edit_message" />
   </TableRow>
   
   <TableRow>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createPatient"
        android:text="@string/button_create_patient" />
   </TableRow>
   <TableRow>
        <EditText
          	android:id="@+id/name"
          	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
          	android:hint="@string/patient_name" />
   </TableRow>
   <TableRow>
         <EditText
          	android:id="@+id/pID"
          	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
          	android:hint="@string/patient_ID" />
    </TableRow>
    <TableRow>
          <EditText
          	android:id="@+id/IID"
          	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
          	android:hint="@string/injury_id" />
   </TableRow>
</TableLayout>