<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/custom_background" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="445dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pt_assistant.TreatmentPlanActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewTreatmentPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Treatment Plan"
        style="@style/PTFont.Dark" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewInjury2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTreatmentPlan"
        android:layout_marginTop="36dp"
        android:text="Injury: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/PTFont.Dark" />

    <TextView
        android:id="@+id/instructIntReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewInstruct1"
        android:layout_alignBottom="@+id/textViewInstruct1"
        android:layout_toRightOf="@+id/textViewInstruct1"
        android:inputType="number"
        android:text="@string/instructIntReps"
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/instructIntMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewInstruct1"
        android:layout_below="@+id/instructIntReps"
        android:inputType="number"
        android:text="@string/instructIntMin"
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/textViewInstruct5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/instructIntMin"
        android:layout_alignBottom="@+id/instructIntMin"
        android:layout_toRightOf="@+id/instructIntMin"
        android:text=" to "
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/instructIntMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewInstruct5"
        android:layout_alignBottom="@+id/textViewInstruct5"
        android:layout_toRightOf="@+id/textViewInstruct5"
        android:inputType="number"
        android:text="@string/instructIntMax"
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/textViewInstruct6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/instructIntMax"
        android:layout_alignBottom="@+id/instructIntMax"
        android:layout_toRightOf="@+id/instructIntMax"
        android:text=" mins a day."
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/textViewPhase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/injuryName"
        android:layout_below="@+id/injuryName"
        android:layout_marginTop="15dp"
        android:text="Phase: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/PTFont.Dark" />

    <TextView
        android:id="@+id/phaseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPhase"
        android:layout_below="@+id/textViewPhase"
        android:inputType="text"
        android:text="@string/phaseName"
        style="@style/PTFont.Dark" />

    <TextView
        android:id="@+id/injuryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewInjury2"
        android:layout_below="@+id/textViewInjury2"
        android:inputType="text"
        android:text="@string/injuryName"
        style="@style/PTFont.Dark" />

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phaseName"
        android:layout_below="@+id/phaseName"
        android:layout_marginTop="24dp"
        android:text="Instructions:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/PTFont.Dark" />

    <TextView
        android:id="@+id/textViewInstruct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewInstructions"
        android:layout_below="@+id/textViewInstructions"
        android:layout_marginTop="19dp"
        android:text="For each exercise, repeat "
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/textViewExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructIntMin"
        android:layout_below="@+id/instructIntMin"
        android:layout_marginTop="24dp"
        android:text="Exercises"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/PTFont.Dark" />

    <TextView
        android:id="@+id/exerciseOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewExercises"
        android:layout_below="@+id/textViewExercises"
        android:layout_marginTop="19dp"
        android:text="@string/exerciseOne"
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/exerciseTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exerciseOne"
        android:layout_below="@+id/exerciseOne"
        android:text="@string/exerciseTwo"
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/exerciseThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exerciseTwo"
        android:layout_below="@+id/exerciseTwo"
        android:text="@string/exerciseThree"
        android:textColor="@color/Navy" />

    <TextView
        android:id="@+id/textViewInstruct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/instructIntReps"
        android:layout_alignBottom="@+id/instructIntReps"
        android:layout_toRightOf="@+id/instructIntReps"
        android:text=" times for "
        android:textColor="@color/Navy" />

    <Button
        android:id="@+id/buttonMain"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/exerciseThree"
        android:background="@drawable/custom_button"
        android:onClick="backToMain"
        android:text="Home"
        android:textAppearance="@style/PTFont.Dark" />

</RelativeLayout>
</ScrollView>
